mise en place du design

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.6",
+    "@nextui-org/react": "^2.4.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "embla-carousel-react": "^8.1.8",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
