--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,15 +12,23 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "./",  // Ajout de baseUrl ici
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["./app/components/*"] // Alias @components
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/Navbar/Navbar.jsx", "app/components/Navbar/Navbar.jsx", "app/components/Navbar/Navbar.jsx"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx", 
+    ".next/types/**/*.ts", 
+    "app/components/Navbar/Navbar.jsx"
+  ],
   "exclude": ["node_modules"]
 }
