--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@nextui-org/react": "^2.4.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "embla-carousel-react": "^8.1.8",
+    "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9"
