--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@mui/material": "^5.16.6",
     "@nextui-org/react": "^2.4.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@web3-react/core": "^8.2.3",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/metamask": "^8.2.4",
     "embla-carousel-react": "^8.1.8",
+    "ethers": "^6.13.2",
+    "eventemitter3": "^5.0.1",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
