--- a/package.json
+++ b/package.json
@@ -19,21 +19,26 @@
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.2.4",
+    "bcryptjs": "^2.4.3",
     "embla-carousel-react": "^8.1.8",
     "ethers": "^6.13.2",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^11.3.28",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
