--- a/package.json
+++ b/package.json
@@ -15,28 +15,38 @@
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.6",
     "@nextui-org/react": "^2.4.6",
+    "@prisma/client": "^5.18.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.2.4",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "embla-carousel-react": "^8.1.8",
     "ethers": "^6.13.2",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^11.3.28",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
+    "next-redux-wrapper": "^8.1.0",
+    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
