--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@mui/material": "^5.16.6",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@web3-react/core": "^8.2.3",
@@ -23,24 +27,29 @@
     "@web3-react/metamask": "^8.2.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.8",
     "ethers": "^6.13.2",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "next-redux-wrapper": "^8.1.0",
-    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.9"
+    "swiper": "^11.1.9",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
