--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@web3-react/core": "^8.2.3",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.2.4",
     "bcrypt": "^5.1.1",
@@ -38,6 +38,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
